[package]
name = "axfs"
version.workspace = true
edition.workspace = true
authors = ["Mivik <mivikq@gmail.com>"]
description = "ArceOS filesystem module"
license.workspace = true
homepage.workspace = true

[features]
default = []
use-ramdisk = []           # TODO: init ramdisk
fat = ["dep:fatfs"]
ext4 = ["dep:lwext4_core"]
times = []
std = ["lwext4_core?/std"]

[dependencies]
axalloc = { workspace = true }
axdriver = { workspace = true, features = ["block"] }
axerrno = { workspace = true }
axfs-ng-vfs = { workspace = true }
axhal = { workspace = true }
axio = { workspace = true, features = ["alloc"] }
axpoll = { workspace = true }
axsync = { workspace = true }
bitflags = "2.10"
cfg-if = { workspace = true }
chrono = { workspace = true }
intrusive-collections = "0.9.7"
kspin = { workspace = true }
log = { workspace = true }
lru = "0.16.0"
scope-local = { workspace = true }
slab = { version = "0.4.9", default-features = false }
spin = { workspace = true }

[dependencies.lwext4_core]
git = "https://github.com/GalOS-hdu/lwext4_core.git"
rev = "896fbf2"
default-features = true
optional = true

[dependencies.fatfs]
package = "starry-fatfs"
version = "0.4.1-preview.2"
default-features = false
optional = true
features = ["alloc", "lfn", "log_level_trace", "unicode"]

[dev-dependencies]
axdriver = { workspace = true, features = ["block", "ramdisk"] }
env_logger = "0.11.8"
